--- a/test/index.html
+++ b/test/index.html
@@ -1,16 +1,22 @@
+import { useState } from 'react';
+import { useForm } from 'react-hook-form';
+import { useMutation } from '@tanstack/react-query';
+import { config } from '@/config';
 import {
   Button,
-  Field,
   HStack,
+  VStack,
+  Text,
+  Box,
   Input,
-  NativeSelect,
+  FormControl,
+  FormLabel,
   useDisclosure,
+  Select,
 } from '@chakra-ui/react';
-import { useForm } from 'react-hook-form';  
-import { config } from '@/config';
-import { useMutation } from '@tanstack/react-query';
-import { useState } from 'react';
-import { IssuerHoldingsModal } from './IssuerHoldingsModal';  // import the new modal
+import { Dialog, Portal, CloseButton } from '@chakra-ui/react';
+import { Table } from '@chakra-ui/react';
+import { Tabs } from '@chakra-ui/react';
 
 interface IssuerFormData {
   issuerName: string;
@@ -21,144 +27,203 @@ interface IssuerFormData {
   sedol: string;
 }
 
-const CreateWallCrosssedIssuerModal = ({ onClose }: { onClose: () => void }) => {
-  const {
-    register,
-    handleSubmit,
-    watch
-  } = useForm<IssuerFormData>({
-    defaultValues: {
-      issuerType: 'Public', // ✅ default Public
-    },
-  });
+const mockHoldings = [
+  { instrumentName: 'Apple Inc Common Stock', instrumentType: 'Equity', quantity: '1,500', account: 'Portfolio A', investmentManager: 'John Smith' },
+  { instrumentName: 'Apple Inc 2.4% 2025 Bond', instrumentType: 'Bond', quantity: '500,000', account: 'Fixed Income Fund', investmentManager: 'Sarah Johnson' },
+];
 
+const mockTradeHistory = [
+  { tradeDate: '2025-01-10', instrument: 'Apple Inc Common Stock', quantity: '+200', account: 'Portfolio A', investmentManager: 'John Smith' },
+  { tradeDate: '2025-01-08', instrument: 'Apple Inc Common Stock', quantity: '-100', account: 'Portfolio B', investmentManager: 'Mike Davis' },
+  { tradeDate: '2025-01-05', instrument: 'Apple Inc 2.4% 2025 Bond', quantity: '+100,000', account: 'Fixed Income Fund', investmentManager: 'Sarah Johnson' },
+];
+
+export function IssuerHoldingsModal({ isOpen, onClose, issuerDetails, onProceed, onRefuse }: any) {
+  if (!issuerDetails) return null;
+
+  return (
+    <Dialog.Root open={isOpen} onOpenChange={(open) => !open && onClose()}>
+      <Portal>
+        <Dialog.Backdrop />
+        <Dialog.Positioner>
+          <Dialog.Content maxW="90vw" bg="gray.800" color="white" rounded="xl" shadow="xl">
+            <Dialog.Header>
+              <Dialog.Title>Issuer Holdings - {issuerDetails.issuerName}</Dialog.Title>
+            </Dialog.Header>
+            <Dialog.CloseTrigger asChild>
+              <CloseButton size="sm" position="absolute" top="1rem" right="1rem" />
+            </Dialog.CloseTrigger>
+
+            <Dialog.Body>
+              <VStack spacing={6} align="stretch">
+                <Box bg="gray.700" p={4} borderRadius="md">
+                  <Text fontWeight="bold" mb={2}>Issuer Details</Text>
+                  <HStack spacing={8} wrap="wrap">
+                    <Text fontSize="sm"><strong>Name:</strong> {issuerDetails.issuerName}</Text>
+                    <Text fontSize="sm"><strong>Ticker:</strong> {issuerDetails.ticker}</Text>
+                    <Text fontSize="sm"><strong>ISIN:</strong> {issuerDetails.isin}</Text>
+                    <Text fontSize="sm"><strong>Type:</strong> {issuerDetails.issuerType}</Text>
+                  </HStack>
+                </Box>
+
+                <Tabs.Root defaultValue="holdings">
+                  <Tabs.List>
+                    <Tabs.Trigger value="holdings">Holdings</Tabs.Trigger>
+                    <Tabs.Trigger value="trades">Trade History</Tabs.Trigger>
+                  </Tabs.List>
+
+                  <Tabs.Content value="holdings">
+                    <Table.Root size="sm">
+                      <Table.Header>
+                        <Table.Row>
+                          <Table.ColumnHeader>Instrument Name</Table.ColumnHeader>
+                          <Table.ColumnHeader>Instrument Type</Table.ColumnHeader>
+                          <Table.ColumnHeader>Quantity</Table.ColumnHeader>
+                          <Table.ColumnHeader>Account</Table.ColumnHeader>
+                          <Table.ColumnHeader>Investment Manager</Table.ColumnHeader>
+                        </Table.Row>
+                      </Table.Header>
+                      <Table.Body>
+                        {mockHoldings.map((h, idx) => (
+                          <Table.Row key={idx}>
+                            <Table.Cell>{h.instrumentName}</Table.Cell>
+                            <Table.Cell>{h.instrumentType}</Table.Cell>
+                            <Table.Cell>{h.quantity}</Table.Cell>
+                            <Table.Cell>{h.account}</Table.Cell>
+                            <Table.Cell>{h.investmentManager}</Table.Cell>
+                          </Table.Row>
+                        ))}
+                      </Table.Body>
+                    </Table.Root>
+                  </Tabs.Content>
+
+                  <Tabs.Content value="trades">
+                    <Table.Root size="sm">
+                      <Table.Header>
+                        <Table.Row>
+                          <Table.ColumnHeader>Trade Date</Table.ColumnHeader>
+                          <Table.ColumnHeader>Instrument</Table.ColumnHeader>
+                          <Table.ColumnHeader>Quantity</Table.ColumnHeader>
+                          <Table.ColumnHeader>Account</Table.ColumnHeader>
+                          <Table.ColumnHeader>Investment Manager</Table.ColumnHeader>
+                        </Table.Row>
+                      </Table.Header>
+                      <Table.Body>
+                        {mockTradeHistory.map((t, idx) => (
+                          <Table.Row key={idx}>
+                            <Table.Cell>{t.tradeDate}</Table.Cell>
+                            <Table.Cell>{t.instrument}</Table.Cell>
+                            <Table.Cell color={t.quantity.startsWith('+') ? 'green.300' : 'red.300'}>{t.quantity}</Table.Cell>
+                            <Table.Cell>{t.account}</Table.Cell>
+                            <Table.Cell>{t.investmentManager}</Table.Cell>
+                          </Table.Row>
+                        ))}
+                      </Table.Body>
+                    </Table.Root>
+                  </Tabs.Content>
+                </Tabs.Root>
+
+                <HStack justify="flex-end" spacing={3}>
+                  <Button variant="outline" colorScheme="gray" onClick={onClose}>Close</Button>
+                  <Button onClick={onRefuse} colorScheme="red">Refuse Wall Cross</Button>
+                  <Button onClick={onProceed} colorScheme="green">Proceed to Wall Cross</Button>
+                </HStack>
+              </VStack>
+            </Dialog.Body>
+          </Dialog.Content>
+        </Dialog.Positioner>
+      </Portal>
+    </Dialog.Root>
+  );
+}
+
+export const CreateWallCrosssedIssuerModal = ({ onClose }: { onClose: () => void }) => {
+  const { register, handleSubmit, watch } = useForm<IssuerFormData>({ defaultValues: { issuerType: 'Public' } });
   const ticker = watch('ticker');
   const isin = watch('isin');
   const cusip = watch('cusip');
   const sedol = watch('sedol');
 
-  // Local state for flow control
   const [buttonLabel, setButtonLabel] = useState('Fetch Issuer Details');
   const [fetchedDetails, setFetchedDetails] = useState<any>(null);
   const [wcId, setWcId] = useState<string | null>(null);
-
-  // Modal control for IssuerHoldingsModal
   const { isOpen: isHoldingsOpen, onOpen: onHoldingsOpen, onClose: onHoldingsClose } = useDisclosure();
 
   const mutation = useMutation({
     mutationFn: async (payload: IssuerFormData) => {
-      const url = `${config.apis.mdmApi}/wallcross/validate`;
-      const res = await fetch(url, {
+      const res = await fetch(`${config.apis.mdmApi}/wallcross/validate`, {
         method: 'POST',
         credentials: 'include',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(payload),
       });
-      if (!res.ok) {
-        const txt = await res.text().catch(() => '');
-        throw new Error(`Failed to create issuer: ${res.status} ${txt}`);
-      }
+      if (!res.ok) throw new Error('Failed to create issuer');
       return res.json();
     },
     onSuccess: (data) => {
       setFetchedDetails(data);
-      setWcId(data.wcId); // ✅ extract wcId
+      setWcId(data.wcId);
       setButtonLabel('Search Issuer Holdings');
     },
   });
 
   const onSubmit = (data: IssuerFormData) => {
-    // ✅ Validation logic
-    if (data.issuerType === 'Public') {
-      const hasOneId = ticker || isin || cusip || sedol;
-      if (!hasOneId) {
-        alert('For Public issuers, at least one of Ticker, ISIN, CUSIP, or SEDOL is required.');
-        return;
-      }
+    if (data.issuerType === 'Public' && !(ticker || isin || cusip || sedol)) {
+      alert('At least one of Ticker, ISIN, CUSIP, or SEDOL is required.');
+      return;
     }
-
-    if (buttonLabel === 'Fetch Issuer Details') {
-      mutation.mutate(data);
-    } else {
-      // Open Issuer Holdings modal
-      onHoldingsOpen();
-    }
+    buttonLabel === 'Fetch Issuer Details' ? mutation.mutate(data) : onHoldingsOpen();
   };
 
-  const handleProceedToWallCross = () => {
-    if (!wcId) return;
-    console.log('Proceeding with wcId:', wcId);
-    // ✅ call your proceed API here
-    onHoldingsClose();
-    onClose();
-  };
-
-  const handleRefuseWallCross = () => {
-    if (!wcId) return;
-    console.log('Refusing with wcId:', wcId);
-    // ✅ call your refuse API here
-    onHoldingsClose();
-    onClose();
-  };
+  const handleProceedToWallCross = () => { if (!wcId) return; console.log('Proceed wcId:', wcId); onHoldingsClose(); onClose(); };
+  const handleRefuseWallCross = () => { if (!wcId) return; console.log('Refuse wcId:', wcId); onHoldingsClose(); onClose(); };
 
   return (
     <>
       <form onSubmit={handleSubmit(onSubmit)}>
         <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>Issuer Name</Field.Label>
-            <Input
-              {...register('issuerName', { required: 'Issuer name is required' })}
-              placeholder="Enter value"
-            />
-          </Field.Root>
+          <FormControl>
+            <FormLabel>Issuer Name</FormLabel>
+            <Input {...register('issuerName', { required: true })} placeholder="Enter value" />
+          </FormControl>
 
-          <Field.Root>
-            <Field.Label>Issuer Type</Field.Label>
-            <NativeSelect.Root>
-              <NativeSelect.Field {...register('issuerType')}>
-                <option value="Public">Public</option>
-                <option value="Private">Private</option>
-              </NativeSelect.Field>
-              <NativeSelect.Indicator />
-            </NativeSelect.Root>
-          </Field.Root>
+          <FormControl>
+            <FormLabel>Issuer Type</FormLabel>
+            <Select {...register('issuerType')}>
+              <option value="Public">Public</option>
+              <option value="Private">Private</option>
+            </Select>
+          </FormControl>
         </HStack>
 
         <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>Ticker</Field.Label>
+          <FormControl>
+            <FormLabel>Ticker</FormLabel>
             <Input {...register('ticker')} placeholder="Enter value" />
-          </Field.Root>
-
-          <Field.Root>
-            <Field.Label>ISIN</Field.Label>
+          </FormControl>
+          <FormControl>
+            <FormLabel>ISIN</FormLabel>
             <Input {...register('isin')} placeholder="Enter value" />
-          </Field.Root>
+          </FormControl>
         </HStack>
 
         <HStack gap={4} mb={4}>
-          <Field.Root>
-            <Field.Label>CUSIP</Field.Label>
+          <FormControl>
+            <FormLabel>CUSIP</FormLabel>
             <Input {...register('cusip')} placeholder="Enter value" />
-          </Field.Root>
-          <Field.Root>
-            <Field.Label>SEDOL</Field.Label>
+          </FormControl>
+          <FormControl>
+            <FormLabel>SEDOL</FormLabel>
             <Input {...register('sedol')} placeholder="Enter value" />
-          </Field.Root>
+          </FormControl>
         </HStack>
 
         <HStack justify="flex-end" mt={6}>
-          <Button variant="outline" onClick={onClose}>
-            Cancel
-          </Button>
-          <Button type="submit" colorScheme="blue" disabled={mutation.isPending}>
-            {buttonLabel}
-          </Button>
+          <Button variant="outline" onClick={onClose}>Cancel</Button>
+          <Button type="submit" colorScheme="blue">{buttonLabel}</Button>
         </HStack>
       </form>
 
-      {/* Issuer Holdings Modal */}
       <IssuerHoldingsModal
         isOpen={isHoldingsOpen}
         onClose={onHoldingsClose}
@@ -169,206 +234,3 @@ const CreateWallCrosssedIssuerModal = ({ onClose }: { onClose: () => void }) => 
     </>
   );
 };
-
-export default CreateWallCrosssedIssuerModal;
-
-
-
-
-import {
-  Modal,
-  ModalOverlay,
-  ModalContent,
-  ModalHeader,
-  ModalBody,
-  ModalCloseButton,
-  Button,
-  HStack,
-  VStack,
-  Text,
-  Box,
-  Table,
-  Thead,
-  Tbody,
-  Tr,
-  Th,
-  Td,
-  Tabs,
-  TabList,
-  TabPanels,
-  Tab,
-  TabPanel,
-} from '@chakra-ui/react'
-
-interface IssuerHoldingsModalProps {
-  isOpen: boolean
-  onClose: () => void
-  issuerDetails: any
-  onProceed: () => void
-  onRefuse: () => void
-}
-
-const mockHoldings = [
-  {
-    instrumentName: 'Apple Inc Common Stock',
-    instrumentType: 'Equity',
-    quantity: '1,500',
-    account: 'Portfolio A',
-    investmentManager: 'John Smith',
-  },
-  {
-    instrumentName: 'Apple Inc 2.4% 2025 Bond',
-    instrumentType: 'Bond',
-    quantity: '500,000',
-    account: 'Fixed Income Fund',
-    investmentManager: 'Sarah Johnson',
-  },
-]
-
-const mockTradeHistory = [
-  {
-    tradeDate: '2025-01-10',
-    instrument: 'Apple Inc Common Stock',
-    quantity: '+200',
-    account: 'Portfolio A',
-    investmentManager: 'John Smith',
-  },
-  {
-    tradeDate: '2025-01-08',
-    instrument: 'Apple Inc Common Stock',
-    quantity: '-100',
-    account: 'Portfolio B',
-    investmentManager: 'Mike Davis',
-  },
-  {
-    tradeDate: '2025-01-05',
-    instrument: 'Apple Inc 2.4% 2025 Bond',
-    quantity: '+100,000',
-    account: 'Fixed Income Fund',
-    investmentManager: 'Sarah Johnson',
-  },
-]
-
-export function IssuerHoldingsModal({ 
-  isOpen, 
-  onClose, 
-  issuerDetails, 
-  onProceed, 
-  onRefuse 
-}: IssuerHoldingsModalProps) {
-  if (!issuerDetails) return null
-
-  return (
-    <Modal isOpen={isOpen} onClose={onClose} size="6xl">
-      <ModalOverlay />
-      <ModalContent bg="gray.800" color="white" maxW="90vw">
-        <ModalHeader>
-          Issuer Holdings - {issuerDetails.issuerName}
-        </ModalHeader>
-        <ModalCloseButton />
-        <ModalBody pb={6}>
-          <VStack spacing={6} align="stretch">
-            {/* Issuer Details Summary */}
-            <Box bg="gray.700" p={4} borderRadius="md">
-              <Text fontWeight="bold" mb={2}>Issuer Details</Text>
-              <HStack spacing={8} flexWrap="wrap">
-                <Text fontSize="sm"><strong>Name:</strong> {issuerDetails.issuerName}</Text>
-                <Text fontSize="sm"><strong>Ticker:</strong> {issuerDetails.ticker}</Text>
-                <Text fontSize="sm"><strong>ISIN:</strong> {issuerDetails.isin}</Text>
-                <Text fontSize="sm"><strong>Type:</strong> {issuerDetails.issuerType}</Text>
-              </HStack>
-            </Box>
-
-            {/* Holdings and Trade History Tabs */}
-            <Tabs variant="enclosed" colorScheme="blue">
-              <TabList>
-                <Tab>Holdings</Tab>
-                <Tab>Trade History (Last 90 days)</Tab>
-              </TabList>
-
-              <TabPanels>
-                {/* Holdings Tab */}
-                <TabPanel px={0}>
-                  <Box overflowX="auto">
-                    <Table variant="simple" size="sm">
-                      <Thead>
-                        <Tr>
-                          <Th color="gray.300">Instrument Name</Th>
-                          <Th color="gray.300">Instrument Type</Th>
-                          <Th color="gray.300">Quantity</Th>
-                          <Th color="gray.300">Account</Th>
-                          <Th color="gray.300">Investment Manager</Th>
-                        </Tr>
-                      </Thead>
-                      <Tbody>
-                        {mockHoldings.map((holding, index) => (
-                          <Tr key={index}>
-                            <Td>{holding.instrumentName}</Td>
-                            <Td>{holding.instrumentType}</Td>
-                            <Td>{holding.quantity}</Td>
-                            <Td>{holding.account}</Td>
-                            <Td>{holding.investmentManager}</Td>
-                          </Tr>
-                        ))}
-                      </Tbody>
-                    </Table>
-                  </Box>
-                </TabPanel>
-
-                {/* Trade History Tab */}
-                <TabPanel px={0}>
-                  <Box overflowX="auto">
-                    <Table variant="simple" size="sm">
-                      <Thead>
-                        <Tr>
-                          <Th color="gray.300">Trade Date</Th>
-                          <Th color="gray.300">Instrument</Th>
-                          <Th color="gray.300">Quantity</Th>
-                          <Th color="gray.300">Account</Th>
-                          <Th color="gray.300">Investment Manager</Th>
-                        </Tr>
-                      </Thead>
-                      <Tbody>
-                        {mockTradeHistory.map((trade, index) => (
-                          <Tr key={index}>
-                            <Td>{trade.tradeDate}</Td>
-                            <Td>{trade.instrument}</Td>
-                            <Td color={trade.quantity.startsWith('+') ? 'green.300' : 'red.300'}>
-                              {trade.quantity}
-                            </Td>
-                            <Td>{trade.account}</Td>
-                            <Td>{trade.investmentManager}</Td>
-                          </Tr>
-                        ))}
-                      </Tbody>
-                    </Table>
-                  </Box>
-                </TabPanel>
-              </TabPanels>
-            </Tabs>
-
-            {/* Action Buttons */}
-            <HStack justify="flex-end" spacing={3}>
-              <Button onClick={onClose} variant="outline" colorScheme="gray">
-                Close
-              </Button>
-              <Button onClick={onRefuse} colorScheme="red">
-                Refuse Wall Cross
-              </Button>
-              <Button onClick={onProceed} colorScheme="green">
-                Proceed to Wall Cross
-              </Button>
-            </HStack>
-          </VStack>
-        </ModalBody>
-      </ModalContent>
-    </Modal>
-  )
-}
-
-
-
-
-
-
-        
