--- a/test/my-view1.html
+++ b/test/my-view1.html
@@ -1,190 +1,152 @@
 import {
   Button,
+  Field,
   HStack,
-  VStack,
-  Text,
-  Box,
-  Dialog,
-  Portal,
-  CloseButton,
-} from "@chakra-ui/react";
-import { Table } from "@chakra-ui/react";
-import { Tabs } from "@chakra-ui/react";
+  Input,
+  NativeSelect,
+  useDisclosure,
+} from '@chakra-ui/react';
+import { useForm } from 'react-hook-form';  
+import { config } from '@/config';
+import { useMutation } from '@tanstack/react-query';
+import { useState } from 'react';
+import { IssuerHoldingsModal } from './IssuerHoldingsModal';  // import the new Dialog-based modal
 
-interface IssuerHoldingsModalProps {
-  isOpen: boolean;
-  onClose: () => void;
-  issuerDetails: any;
-  onProceed: () => void;
-  onRefuse: () => void;
+interface IssuerFormData {
+  issuerName: string;
+  issuerType: string;
+  ticker: string;
+  isin: string;
+  cusip: string;
+  sedol: string;
 }
 
-const mockHoldings = [
-  {
-    instrumentName: "Apple Inc Common Stock",
-    instrumentType: "Equity",
-    quantity: "1,500",
-    account: "Portfolio A",
-    investmentManager: "John Smith",
-  },
-  {
-    instrumentName: "Apple Inc 2.4% 2025 Bond",
-    instrumentType: "Bond",
-    quantity: "500,000",
-    account: "Fixed Income Fund",
-    investmentManager: "Sarah Johnson",
-  },
-];
+const CreateWallCrosssedIssuerModal = ({ onClose }: { onClose: () => void }) => {
+  const { register, handleSubmit, watch } = useForm<IssuerFormData>({
+    defaultValues: { issuerType: 'Public' },
+  });
 
-const mockTradeHistory = [
-  {
-    tradeDate: "2025-01-10",
-    instrument: "Apple Inc Common Stock",
-    quantity: "+200",
-    account: "Portfolio A",
-    investmentManager: "John Smith",
-  },
-  {
-    tradeDate: "2025-01-08",
-    instrument: "Apple Inc Common Stock",
-    quantity: "-100",
-    account: "Portfolio B",
-    investmentManager: "Mike Davis",
-  },
-  {
-    tradeDate: "2025-01-05",
-    instrument: "Apple Inc 2.4% 2025 Bond",
-    quantity: "+100,000",
-    account: "Fixed Income Fund",
-    investmentManager: "Sarah Johnson",
-  },
-];
+  const ticker = watch('ticker');
+  const isin = watch('isin');
+  const cusip = watch('cusip');
+  const sedol = watch('sedol');
 
-export function IssuerHoldingsModal({
-  isOpen,
-  onClose,
-  issuerDetails,
-  onProceed,
-  onRefuse,
-}: IssuerHoldingsModalProps) {
-  if (!issuerDetails) return null;
+  const [buttonLabel, setButtonLabel] = useState('Fetch Issuer Details');
+  const [fetchedDetails, setFetchedDetails] = useState<any>(null);
+  const [wcId, setWcId] = useState<string | null>(null);
+
+  const { isOpen: isHoldingsOpen, onOpen: onHoldingsOpen, onClose: onHoldingsClose } = useDisclosure();
+
+  const mutation = useMutation({
+    mutationFn: async (payload: IssuerFormData) => {
+      const url = `${config.apis.mdmApi}/wallcross/validate`;
+      const res = await fetch(url, {
+        method: 'POST',
+        credentials: 'include',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify(payload),
+      });
+      if (!res.ok) {
+        const txt = await res.text().catch(() => '');
+        throw new Error(`Failed to create issuer: ${res.status} ${txt}`);
+      }
+      return res.json();
+    },
+    onSuccess: (data) => {
+      setFetchedDetails(data);
+      setWcId(data.wcId);
+      setButtonLabel('Search Issuer Holdings');
+    },
+  });
+
+  const onSubmit = (data: IssuerFormData) => {
+    if (data.issuerType === 'Public' && !(ticker || isin || cusip || sedol)) {
+      alert('For Public issuers, at least one of Ticker, ISIN, CUSIP, or SEDOL is required.');
+      return;
+    }
+
+    buttonLabel === 'Fetch Issuer Details' ? mutation.mutate(data) : onHoldingsOpen();
+  };
+
+  const handleProceedToWallCross = () => {
+    if (!wcId) return;
+    console.log('Proceeding with wcId:', wcId);
+    onHoldingsClose();
+    onClose();
+  };
+
+  const handleRefuseWallCross = () => {
+    if (!wcId) return;
+    console.log('Refusing with wcId:', wcId);
+    onHoldingsClose();
+    onClose();
+  };
 
   return (
-    <Dialog.Root open={isOpen} onOpenChange={(open) => !open && onClose()}>
-      <Dialog.Trigger />
-      <Portal>
-        <Dialog.Backdrop />
-        <Dialog.Positioner>
-          <Dialog.Content maxW="90vw" bg="gray.800" color="white" borderRadius="xl">
-            <Dialog.Header>
-              <Text fontSize="lg" fontWeight="bold">
-                Issuer Holdings - {issuerDetails.issuerName}
-              </Text>
-              <Dialog.CloseTrigger asChild>
-                <CloseButton size="sm" />
-              </Dialog.CloseTrigger>
-            </Dialog.Header>
+    <>
+      <form onSubmit={handleSubmit(onSubmit)}>
+        <HStack gap={4} mb={4}>
+          <Field.Root>
+            <Field.Label>Issuer Name</Field.Label>
+            <Input
+              {...register('issuerName', { required: 'Issuer name is required' })}
+              placeholder="Enter value"
+            />
+          </Field.Root>
 
-            <Dialog.Body>
-              <VStack spacing={6} align="stretch">
-                {/* Issuer Summary */}
-                <Box bg="gray.700" p={4} borderRadius="md">
-                  <Text fontWeight="bold" mb={2}>
-                    Issuer Details
-                  </Text>
-                  <HStack spacing={8}>
-                    <Text fontSize="sm">
-                      <strong>Name:</strong> {issuerDetails.issuerName}
-                    </Text>
-                    <Text fontSize="sm">
-                      <strong>Ticker:</strong> {issuerDetails.ticker}
-                    </Text>
-                    <Text fontSize="sm">
-                      <strong>ISIN:</strong> {issuerDetails.isin}
-                    </Text>
-                    <Text fontSize="sm">
-                      <strong>Type:</strong> {issuerDetails.issuerType}
-                    </Text>
-                  </HStack>
-                </Box>
+          <Field.Root>
+            <Field.Label>Issuer Type</Field.Label>
+            <NativeSelect.Root>
+              <NativeSelect.Field {...register('issuerType')}>
+                <option value="Public">Public</option>
+                <option value="Private">Private</option>
+              </NativeSelect.Field>
+              <NativeSelect.Indicator />
+            </NativeSelect.Root>
+          </Field.Root>
+        </HStack>
 
-                {/* Tabs */}
-                <Tabs.Root variant="line" colorScheme="blue" defaultValue="holdings">
-                  <Tabs.List>
-                    <Tabs.Trigger value="holdings">Holdings</Tabs.Trigger>
-                    <Tabs.Trigger value="trades">Trade History (Last 90 days)</Tabs.Trigger>
-                  </Tabs.List>
+        <HStack gap={4} mb={4}>
+          <Field.Root>
+            <Field.Label>Ticker</Field.Label>
+            <Input {...register('ticker')} placeholder="Enter value" />
+          </Field.Root>
 
-                  <Tabs.Content value="holdings">
-                    <Table.Root size="sm">
-                      <Table.Header>
-                        <Table.Row>
-                          <Table.ColumnHeader>Instrument Name</Table.ColumnHeader>
-                          <Table.ColumnHeader>Instrument Type</Table.ColumnHeader>
-                          <Table.ColumnHeader>Quantity</Table.ColumnHeader>
-                          <Table.ColumnHeader>Account</Table.ColumnHeader>
-                          <Table.ColumnHeader>Investment Manager</Table.ColumnHeader>
-                        </Table.Row>
-                      </Table.Header>
-                      <Table.Body>
-                        {mockHoldings.map((h, idx) => (
-                          <Table.Row key={idx}>
-                            <Table.Cell>{h.instrumentName}</Table.Cell>
-                            <Table.Cell>{h.instrumentType}</Table.Cell>
-                            <Table.Cell>{h.quantity}</Table.Cell>
-                            <Table.Cell>{h.account}</Table.Cell>
-                            <Table.Cell>{h.investmentManager}</Table.Cell>
-                          </Table.Row>
-                        ))}
-                      </Table.Body>
-                    </Table.Root>
-                  </Tabs.Content>
+          <Field.Root>
+            <Field.Label>ISIN</Field.Label>
+            <Input {...register('isin')} placeholder="Enter value" />
+          </Field.Root>
+        </HStack>
 
-                  <Tabs.Content value="trades">
-                    <Table.Root size="sm">
-                      <Table.Header>
-                        <Table.Row>
-                          <Table.ColumnHeader>Trade Date</Table.ColumnHeader>
-                          <Table.ColumnHeader>Instrument</Table.ColumnHeader>
-                          <Table.ColumnHeader>Quantity</Table.ColumnHeader>
-                          <Table.ColumnHeader>Account</Table.ColumnHeader>
-                          <Table.ColumnHeader>Investment Manager</Table.ColumnHeader>
-                        </Table.Row>
-                      </Table.Header>
-                      <Table.Body>
-                        {mockTradeHistory.map((t, idx) => (
-                          <Table.Row key={idx}>
-                            <Table.Cell>{t.tradeDate}</Table.Cell>
-                            <Table.Cell>{t.instrument}</Table.Cell>
-                            <Table.Cell color={t.quantity.startsWith("+") ? "green.300" : "red.300"}>
-                              {t.quantity}
-                            </Table.Cell>
-                            <Table.Cell>{t.account}</Table.Cell>
-                            <Table.Cell>{t.investmentManager}</Table.Cell>
-                          </Table.Row>
-                        ))}
-                      </Table.Body>
-                    </Table.Root>
-                  </Tabs.Content>
-                </Tabs.Root>
+        <HStack gap={4} mb={4}>
+          <Field.Root>
+            <Field.Label>CUSIP</Field.Label>
+            <Input {...register('cusip')} placeholder="Enter value" />
+          </Field.Root>
+          <Field.Root>
+            <Field.Label>SEDOL</Field.Label>
+            <Input {...register('sedol')} placeholder="Enter value" />
+          </Field.Root>
+        </HStack>
 
-                {/* Action Buttons */}
-                <HStack justify="flex-end" spacing={3}>
-                  <Button variant="outline" colorScheme="gray" onClick={onClose}>
-                    Close
-                  </Button>
-                  <Button onClick={onRefuse} colorScheme="red">
-                    Refuse Wall Cross
-                  </Button>
-                  <Button onClick={onProceed} colorScheme="green">
-                    Proceed to Wall Cross
-                  </Button>
-                </HStack>
-              </VStack>
-            </Dialog.Body>
-          </Dialog.Content>
-        </Dialog.Positioner>
-      </Portal>
-    </Dialog.Root>
+        <HStack justify="flex-end" mt={6}>
+          <Button variant="outline" onClick={onClose}>Cancel</Button>
+          <Button type="submit" colorScheme="blue" disabled={mutation.isPending}>
+            {buttonLabel}
+          </Button>
+        </HStack>
+      </form>
+
+      {/* Issuer Holdings Modal */}
+      <IssuerHoldingsModal
+        isOpen={isHoldingsOpen}
+        onClose={onHoldingsClose}
+        issuerDetails={fetchedDetails}
+        onProceed={handleProceedToWallCross}
+        onRefuse={handleRefuseWallCross}
+      />
+    </>
   );
-}
+};
+
+export default CreateWallCrosssedIssuerModal;
